Fixed some typos